[package]
name = "ub64m"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = { version = "0.21.4", features = ["alloc"] }
clap = { version = "4.4.6", features = ["derive"] }
yaml-rust = "0.4.5"
